--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       # Bind mount SSL certs (put fullchain.pem and privkey.pem into ./nginx/ssl)
+      - /etc/letsencrypt/live/api.seentics.com/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/api.seentics.com/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - api-gateway
