ssl certificate created

--- a/.env.producton
+++ b/.env.producton
@@ -3,17 +3,17 @@
 
 # General
 ENVIRONMENT=production
-FRONTEND_URL=https://app.your-domain.com
-GLOBAL_API_KEY=replace-with-global-api-key
-JWT_SECRET=replace-with-strong-random-secret
+FRONTEND_URL=https://seentics.com/
+GLOBAL_API_KEY=LSFKjdoih938420jalkd2o
+JWT_SECRET=SIdslkfh93o48u29083ihdaljfh
 
 # Redis
-REDIS_PASSWORD=replace-with-redis-strong-password
-REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
+REDIS_PASSWORD=Secret123
+REDIS_URL=redis://:Secret123@redis:6379
 
 # MongoDB (Users service)
 MONGO_INITDB_ROOT_USERNAME=seentics
-MONGO_INITDB_ROOT_PASSWORD=replace-with-mongo-strong-password
+MONGO_INITDB_ROOT_PASSWORD=Secret123
 USERS_MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/seentics?authSource=admin
 
 # MongoDB (Workflows service)
@@ -21,7 +21,7 @@ WORKFLOWS_MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROO
 
 # TimescaleDB / Postgres (Analytics service)
 POSTGRES_USER=seentics
-POSTGRES_PASSWORD=replace-with-postgres-strong-password
+POSTGRES_PASSWORD=Secret123
 POSTGRES_DB=seentics_analytics
 ANALYTICS_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@timescaledb:5432/${POSTGRES_DB}?sslmode=disable
 
@@ -32,3 +32,8 @@ RESEND_FROM=no-reply@your-domain.com
 # Optional overrides
 # API_GATEWAY_PORT=8080
 # CORS_ORIGIN=${FRONTEND_URL}
+
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
