--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+
 
 # Production compose for AWS t3a.medium (2 vCPU, 4GB RAM)
 # - Exposes only Nginx on 80/443
@@ -146,7 +146,6 @@ services:
   mongodb:
     image: mongo:7
     container_name: mongodb
-    # No host port exposure in prod; access via network only
     expose:
       - "27017"
     environment:
@@ -159,11 +158,11 @@ services:
     restart: unless-stopped
     command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
     healthcheck:
-      test: ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --eval 'db.adminCommand(\"ping\")'"]
+      test: ["CMD-SHELL", "mongosh mongodb://$${MONGO_INITDB_ROOT_USERNAME}:$${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/admin --eval 'db.adminCommand(\"ping\")'"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 10s
+      start_period: 20s
 
   timescaledb:
     image: timescale/timescaledb:latest-pg14
