--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -158,7 +158,7 @@ services:
     restart: unless-stopped
     command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
     healthcheck:
-      test: ["CMD-SHELL", "mongosh mongodb://$${MONGO_INITDB_ROOT_USERNAME}:$${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017/admin --eval 'db.adminCommand(\"ping\")'"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")'"]
       interval: 10s
       timeout: 5s
       retries: 5
