--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,10 +15,11 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # Bind mount SSL certs (put fullchain.pem and privkey.pem into ./nginx/ssl)
-      - /etc/letsencrypt/live/api.seentics.com/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - /etc/letsencrypt/live/api.seentics.com/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      # Bind mount SSL certs directory into /etc/nginx/ssl
+      # Option A: Use repo-managed certs (place fullchain.pem and privkey.pem in ./nginx/ssl)
       - ./nginx/ssl:/etc/nginx/ssl:ro
+      # Option B: Use Let's Encrypt certs from host (uncomment next line and comment Option A)
+      # - /etc/letsencrypt/live/api.seentics.com:/etc/nginx/ssl:ro
     depends_on:
       - api-gateway
     networks:
@@ -158,7 +159,7 @@ services:
     restart: unless-stopped
     command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
     healthcheck:
-      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")'"]
+      test: ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --eval 'db.adminCommand(\"ping\")'"]
       interval: 10s
       timeout: 5s
       retries: 5
