--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -158,12 +158,12 @@ services:
       - seentics-network
     restart: unless-stopped
     command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
-    healthcheck:
-      test: ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --eval 'db.adminCommand(\"ping\")'"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 20s
+    # healthcheck:
+    #   test: ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --eval 'db.adminCommand(\"ping\")'"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 20s
 
   timescaledb:
     image: timescale/timescaledb:latest-pg14
