--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -145,25 +145,26 @@ services:
       start_period: 5s
 
   mongodb:
-    image: mongo:7
-    container_name: mongodb
-    expose:
-      - "27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-    volumes:
-      - mongo-data:/data/db
-    networks:
-      - seentics-network
-    restart: unless-stopped
-    command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
-    healthcheck:
-      test: ["CMD-SHELL", "mongosh --username $${MONGO_INITDB_ROOT_USERNAME} --password $${MONGO_INITDB_ROOT_PASSWORD} --eval 'db.adminCommand(\"ping\")'"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 20s
+      image: mongo:7
+      container_name: mongodb
+      expose:
+        - "27017"
+      environment:
+        - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+        - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      volumes:
+        - mongo-data:/data/db
+      networks:
+        - seentics-network
+      restart: unless-stopped
+      command: mongod --auth --wiredTigerCacheSizeGB 1 --maxConns 100
+      healthcheck:
+        # Test that just checks if mongod process is responsive
+        test: ["CMD-SHELL", "mongosh --quiet --eval 'quit(db.runCommand({ping: 1}).ok ? 0 : 2)'"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+        start_period: 30s
 
   timescaledb:
     image: timescale/timescaledb:latest-pg14
