--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,4 @@
-
+version: "3.9"
 services:
   nginx:
     image: nginx:1.25-alpine
@@ -8,7 +8,14 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/live/api.seentics.com:/etc/nginx/ssl:ro
+      - type: bind
+        source: /etc/letsencrypt/live/api.seentics.com/fullchain.pem
+        target: /etc/nginx/ssl/fullchain.pem
+        read_only: true
+      - type: bind
+        source: /etc/letsencrypt/live/api.seentics.com/privkey.pem
+        target: /etc/nginx/ssl/privkey.pem
+        read_only: true
     depends_on:
       - api-gateway
     networks:
