--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.1",
+    "@types/leaflet": "^1.9.20",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -64,6 +65,7 @@
     "framer-motion": "^11.2.10",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -72,6 +74,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-simple-maps": "^3.0.0",
     "reactflow": "^11.11.3",
     "recharts": "^2.15.1",
     "sonner": "^2.0.6",
