--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.51.1",
     "@types/leaflet": "^1.9.20",
+    "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
