timescale replace with postgress

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ GLOBAL_API_KEY=your-global-api-key-for-service-communication
 # MongoDB (User Service)
 MONGODB_URI=mongodb://seentics:seentics_mongo_pass@localhost:27017/seentics?authSource=admin
 
-# PostgreSQL/TimescaleDB (Analytics Service)
+# PostgreSQL (Analytics Service)
 DATABASE_URL=postgres://seentics:seentics_postgres_pass@localhost:5432/seentics_analytics?sslmode=disable
 
 # =============================================================================
