--- a/.env.production.example
+++ b/.env.production.example
@@ -19,11 +19,11 @@ USERS_MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PA
 # MongoDB (Workflows service)
 WORKFLOWS_MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/seentics_workflows?authSource=admin
 
-# TimescaleDB / Postgres (Analytics service)
+# PostgreSQL (Analytics service)
 POSTGRES_USER=seentics
 POSTGRES_PASSWORD=replace-with-postgres-strong-password
 POSTGRES_DB=seentics_analytics
-ANALYTICS_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@timescaledb:5432/${POSTGRES_DB}?sslmode=disable
+ANALYTICS_DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
 
 # Email provider (Resend)
 RESEND_API_KEY=replace-with-resend-api-key
