--- a/services/analytics/.env.example
+++ b/services/analytics/.env.example
@@ -7,7 +7,7 @@ ENVIRONMENT=development
 PORT=3002
 HOST=localhost
 
-# Database Configuration (TimescaleDB/PostgreSQL)
+# Database Configuration (PostgreSQL)
 DATABASE_URL=postgres://username:password@localhost:5432/analytics
 POSTGRES_USER=seentics
 POSTGRES_PASSWORD=your-postgres-password
