--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -77,7 +77,7 @@ services:
     environment:
       - ENVIRONMENT
       - PORT=3002
-      - DATABASE_URL=postgres://seentics:seentics_postgres_pass@timescaledb:5432/seentics_analytics?sslmode=disable
+      - DATABASE_URL=postgres://seentics:seentics_postgres_pass@postgres:5432/seentics_analytics?sslmode=disable
       - LOG_LEVEL=info
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_URL=redis:6379
@@ -85,7 +85,7 @@ services:
       - GLOBAL_API_KEY=${GLOBAL_API_KEY}
       - USER_SERVICE_URL=http://user-service:3001
     depends_on:
-      timescaledb:
+      postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
@@ -147,19 +147,18 @@ services:
       retries: 5
       start_period: 10s
 
-  timescaledb:
-    image: timescale/timescaledb:latest-pg14
-    container_name: timescaledb
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
     environment:
       POSTGRES_USER: seentics
       POSTGRES_PASSWORD: seentics_postgres_pass
       POSTGRES_DB: seentics_analytics
     volumes:
-      - timescaledb-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - seentics-network
     restart: unless-stopped
-    command: ["postgres", "-c", "shared_preload_libraries=timescaledb"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U seentics -d seentics_analytics -h localhost -p 5432"]
       interval: 5s
@@ -185,7 +184,7 @@ services:
 
 volumes:
   mongo-data:
-  timescaledb-data:
+  postgres-data:
   redis-data:
 
 networks:
