feature flag added

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,22 @@
 # Seentics Analytics Platform - Environment Configuration
-
 # =============================================================================
 # CORE APPLICATION SETTINGS
 # =============================================================================
 ENVIRONMENT=development
 FRONTEND_URL=http://localhost:3000
-API_GATEWAY_PORT=8080
+# Deployment Configuration
+# Set to 'true' for cloud/SaaS features (billing, support, usage limits)
+# Set to 'false' or omit for open source deployment
+CLOUD_FEATURES_ENABLED=false
 
+# API Gateway Configuration
+GATEWAY_PORT=8080
+GATEWAY_HOST=0.0.0.0
 # =============================================================================
 # SECURITY & AUTHENTICATION
 # =============================================================================
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 GLOBAL_API_KEY=your-global-api-key-for-service-communication
-
-# =============================================================================
 # DATABASE CONFIGURATIONS
 # =============================================================================
 
