--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,12 @@ services:
       - REDIS_URL=redis://:seentics_redis_pass@redis:6379
       - GLOBAL_API_KEY=${GLOBAL_API_KEY}
     depends_on:
-      - user-service
-      - analytics-service
-      - workflows-service
-      - redis
+      redis:
+        condition: service_healthy
+      user-service:
+        condition: service_started
     networks:
       - seentics-network
-
   user-service:
     build: ./services/users
     container_name: user-service
@@ -31,6 +30,7 @@ services:
       - PORT=3001
       - MONGODB_URI=mongodb://seentics:seentics_mongo_pass@mongodb:27017/seentics?authSource=admin
       - USER_JWT_SECRET=${JWT_SECRET}
+      - CLOUD_FEATURES_ENABLED=${CLOUD_FEATURES_ENABLED:-false}
       - FRONTEND_URL=${FRONTEND_URL}
       - CORS_ORIGIN=${FRONTEND_URL}
       - GLOBAL_API_KEY=${GLOBAL_API_KEY}
@@ -65,6 +65,7 @@ services:
       - USER_SERVICE_URL=http://user-service:3001
       - MAXMIND_LICENSE_KEY=${MAXMIND_LICENSE_KEY}
       - MAXMIND_DB_PATH=/data/GeoLite2-City.mmdb
+      - CLOUD_FEATURES_ENABLED=${CLOUD_FEATURES_ENABLED:-false}
     volumes:
       - maxmind-data:/data
     depends_on:
@@ -98,6 +99,7 @@ services:
       - USERS_SERVICE_URL=http://user-service:3001
       - RESEND_API_KEY=${RESEND_API_KEY}
       - RESEND_FROM=${RESEND_FROM}
+      - CLOUD_FEATURES_ENABLED=${CLOUD_FEATURES_ENABLED:-false}
     depends_on:
       mongodb:
         condition: service_healthy
