updated example env file

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,80 @@
-# Seentics Analytics Platform - Environment Configuration
 # =============================================================================
-# CORE APPLICATION SETTINGS
+# SEENTICS ANALYTICS PLATFORM - ENVIRONMENT CONFIGURATION
 # =============================================================================
-ENVIRONMENT=development
-FRONTEND_URL=http://localhost:3000
-# Deployment Configuration
-# Set to 'true' for cloud/SaaS features (billing, support, usage limits)
-# Set to 'false' or omit for open source deployment
+# Copy this to .env for local development
+# For production, use secure secret management instead of hardcoded values
+
+# =============================================================================
+# DEPLOYMENT MODE
+# =============================================================================
+# Set to 'false' for open source mode (unlimited usage, no billing)
+# Set to 'true' for cloud/SaaS mode (with billing and usage limits)
 CLOUD_FEATURES_ENABLED=false
 
-# API Gateway Configuration
+# =============================================================================
+# APPLICATION URLS
+# =============================================================================
+ENVIRONMENT=development
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
+API_URL=http://localhost:8080
+GATEWAY_URL=http://localhost:8080
+CORS_ORIGIN=http://localhost:3000
+
+# =============================================================================
+# SERVICE PORTS & URLS
+# =============================================================================
+API_GATEWAY_PORT=8080
 GATEWAY_PORT=8080
 GATEWAY_HOST=0.0.0.0
+USER_SERVICE_PORT=3001
+PORT=3001
+
+# Inter-service communication URLs
+USER_SERVICE_URL=http://user-service:3001
+ANALYTICS_SERVICE_URL=http://analytics-service:3002
+WORKFLOW_SERVICE_URL=http://workflows-service:3003
+USERS_SERVICE_URL=http://user-service:3001
 # =============================================================================
 # SECURITY & AUTHENTICATION
 # =============================================================================
+# JWT secrets (use strong, unique keys in production)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+USER_JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_REFRESH_SECRET=your-refresh-secret-key-here-make-it-different-from-jwt-secret
+JWT_EXPIRE=7d
+JWT_REFRESH_EXPIRE=30d
+
+# Global API key for inter-service communication (change in production)
 GLOBAL_API_KEY=your-global-api-key-for-service-communication
-# DATABASE CONFIGURATIONS
+
+# Admin access code for admin dashboard
+ADMIN_CODE=admin123
+# =============================================================================
+# DATABASE CONFIGURATION
 # =============================================================================
 
-# MongoDB (User Service)
-MONGODB_URI=mongodb://seentics:seentics_mongo_pass@localhost:27017/seentics?authSource=admin
+# --- MongoDB (Users & Workflows) ---
+MONGO_ROOT_USERNAME=seentics
+MONGO_ROOT_PASSWORD=seentics_mongo_pass
+MONGO_DB=seentics
+MONGODB_URI=mongodb://seentics:seentics_mongo_pass@mongodb:27017/seentics?authSource=admin
+USER_MONGODB_URI=mongodb://seentics:seentics_mongo_pass@mongodb:27017/seentics?authSource=admin
 
-# PostgreSQL (Analytics Service)
-DATABASE_URL=postgres://seentics:seentics_postgres_pass@localhost:5432/seentics_analytics?sslmode=disable
+# --- PostgreSQL / TimescaleDB (Analytics Data) ---
+POSTGRES_USER=seentics
+POSTGRES_PASSWORD=seentics_postgres_pass
+POSTGRES_DB=seentics_analytics
+DATABASE_URL=postgresql://seentics:seentics_postgres_pass@postgres:5432/seentics_analytics?sslmode=disable
 
 # =============================================================================
 # REDIS CONFIGURATION (Caching & Sessions)
 # =============================================================================
-REDIS_URL=redis://:seentics_redis_pass@localhost:6379
+REDIS_URL=redis://:seentics_redis_pass@redis:6379
 REDIS_PASSWORD=seentics_redis_pass
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
 
 # =============================================================================
 # GEOLOCATION SERVICES
@@ -50,12 +94,39 @@ RESEND_API_KEY=your-resend-api-key
 RESEND_FROM=noreply@yourdomain.com
 
 # =============================================================================
-# EXTERNAL API KEYS (Optional)
+# OAUTH CONFIGURATION (Optional)
 # =============================================================================
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
 
-# Add any additional API keys for integrations here
-# STRIPE_SECRET_KEY=sk_test_...
-# OPENAI_API_KEY=sk-...
+# =============================================================================
+# PAYMENT INTEGRATION (Cloud Mode Only)
+# =============================================================================
+# LemonSqueezy Configuration (for billing when CLOUD_FEATURES_ENABLED=true)
+LEMON_SQUEEZY_API_KEY=your-lemon-squeezy-api-key
+LEMONSQUEEZY_API_KEY=your-lemon-squeezy-api-key
+LEMON_SQUEEZY_WEBHOOK_SECRET=your-lemon-squeezy-webhook-secret
+LEMONSQUEEZY_WEBHOOK_SECRET=your-lemon-squeezy-webhook-secret
+LEMON_SQUEEZY_STORE_ID=your-store-id
+LEMONSQUEEZY_STORE_ID=your-store-id
+LEMONSQUEEZY_STANDARD_VARIANT_ID=your-standard-variant-id
+LEMONSQUEEZY_PRO_VARIANT_ID=your-pro-variant-id
+
+# =============================================================================
+# ANALYTICS CONFIGURATION
+# =============================================================================
+BATCH_SIZE=1000
+BATCH_TIMEOUT=5s
+WORKER_COUNT=10
+ANALYTICS_BATCH_SIZE=100
+ANALYTICS_FLUSH_INTERVAL=5000
+
+# =============================================================================
+# WEBHOOK CONFIGURATION
+# =============================================================================
+WEBHOOK_HMAC_SECRET=your-webhook-hmac-secret
 
 # =============================================================================
 # DEVELOPMENT SETTINGS
