git ignore modified

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ coverage/
 .env
 .env.local
 .env.production
+.env.production.example
+
 .env.staging
 .env.development
 
@@ -40,6 +42,9 @@ Thumbs.db
 # Docker
 *.log
 docker-compose.override.yml
+docker-compose.prod.yml
+docker-compose.production.yml
+docker-compose.staging.yml
 
 # Logs
 logs/
